# thd-deep-learning

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  deep_learning_bericht.docx  pyproject.toml  readme.md
data/: readme.md
models/: readme.md  results.md
report/: 01_problem&dataset.typ  01_problem.typ  02_dataset.typ  03_from_scratch.typ  04_transferlearning.typ  05_results.typ  06_comparision.typ  07_discussion.typ  main.typ  refs.bib  text.typ
scripts/: train_freezed_gpu.sh
src/eda/: eda.ipynb
src/exploratory-data-analysis/: eda.ipynb
src/from-scratch/: cnn_binary.py  cnn_multiclass.py  test_multiclass.py
src/from-scratch/v1/: cnn_binary_v1.py  cnn_multiclass_v1.py
src/from-scratch/v2/: cnn_binary_v2.py  cnn_multiclass_v2.py
src/from-scratch/v3/: cnn_binary_v3.py  cnn_multiclass_v3.py
src/from-scratch/v4/: cnn_binary_v4.py  cnn_multiclass_v4.py
src/helpers/: plot_results.py  project_constants.py  split_data.py
src/inference/: accuracy_testing.py
src/transferlearning/: transferlearning_binary.py  transferlearning_multiclass.py
src/transferlearning/multilabel_classification/: training_freezed.py  training_unfreezed.py
