[project]
name = "thd-deep-learning"
version = "0.1.0"
description = "Deep learning experiments for EuroSAT with TensorFlow ROCm."
requires-python = ">=3.12,<3.13"
dependencies = [
  "tensorflow==2.20.0",
  "numpy>=1.26,<2",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "scikit-learn>=1.4,<2",
  "pillow>=10,<11",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29,<7",
  "jupyterlab>=4.2,<5",
  "ruff>=0.9,<0.10",
]

[tool.uv]
package = false
default-groups = ["dev"]
